# crm-llm

./: AGENTS.md  GEMINI.md  README.md  pyproject.toml
.gemini/skills/create-opportunity/: SKILL.md
.gemini/skills/create_account/: SKILL.md
.gemini/skills/create_opportunity/: SKILL.md
.gemini/skills/crm-create-engagement/: SKILL.md
.gemini/skills/crm-create-invoice/: SKILL.md
.gemini/skills/crm-create-payment/: SKILL.md
.gemini/skills/crm-create-retainer/: SKILL.md
.gemini/skills/crm-create-source-artifact/: SKILL.md
apps/: __init__.py
apps/api/: __init__.py
apps/cli/: __init__.py
apps/web/: __init__.py
docs/: crm-journey-spec.md  crm-opportunity-manager-spec.md  engagement-workstream-source-artifact-plan.md  prd-v3-telemetry-layer.md  schema-spec.md  skill-map.md
scripts/: crm_morning_brief.py  engagement_manager.py  finance_manager.py  inbox_manager.py  navigation_manager.py  organization_manager.py  record_manager.py  relationship_memory.py  source_artifact_manager.py  task_manager.py
templates/: account-template.md  activity-template.md  engagement-template.md  invoice-template.md  lead-template.md  note-template.md  opportunity-template.md  organization-template.md  payment-template.md  report-template.md  retainer-template.md  source-artifact-template.md  task-template.md  workstream-template.md
tests/: test_crm_api_app.py  test_crm_api_service.py  test_crm_frontend_app.py  test_delivery_finance.py  test_ingest_drive_source_artifacts.py  test_ingest_whatsapp.py  test_opportunity_handoff.py  test_source_artifact_manager.py
(+40 files in other folders)
